RESOLVED FIXED207017
Can still get stuck after swipe backwards with a slow server, even after r254552
https://bugs.webkit.org/show_bug.cgi?id=207017
Summary Can still get stuck after swipe backwards with a slow server, even after r254552
Tim Horton
Reported 2020-01-30 14:07:21 PST
Can still get stuck after swipe backwards with a slow server, even after r254552
Attachments
Patch (3.35 KB, patch)
2020-01-30 14:07 PST, Tim Horton
cdumez: review+
cdumez: commit-queue-
Tim Horton
Comment 1 2020-01-30 14:07:31 PST
Tim Horton
Comment 2 2020-01-30 14:08:52 PST
Chris Dumez
Comment 3 2020-01-30 14:10:08 PST
Comment on attachment 389287 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=389287&action=review > Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:391 > +void ProvisionalPageProxy::navigationGestureDidEnd() Can we call this something like: unfreezeLayerTreeDueToSwipeAnimation() ? Given that you're only calling this when the m_isLayerTreeFrozenDueToSwipeAnimation flag is set on the WebPageProxy.
Tim Horton
Comment 4 2020-01-30 14:28:45 PST
Heh, that was the first name I had for it. Sure!
Tim Horton
Comment 5 2020-01-30 14:31:51 PST
Note You need to log in before you can comment on or make changes to this bug.