Can still get stuck after swipe backwards with a slow server, even after r254552 https://bugs.webkit.org/show_bug.cgi?id=207017 <rdar://problem/59016256>

Reviewed by Chris Dumez.

* UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::unfreezeLayerTreeDueToSwipeAnimation):
* UIProcess/ProvisionalPageProxy.h:
* UIProcess/WebPageProxy.cpp:
There's a second case where you can get stuck with the "swipe gesture"
layer tree freeze reason in the web process: when doing a cross-origin
navigation where the load takes more than 3 seconds (the swipe
snapshot timeout) to commit, the provisional page will have mirrored
the original page's frozen state upon creation, but will not ever
receive the unfreeze, because it is sent while still provisional.

To fix this, just forward the unfreeze message to the provisional page.


Canonical link: https://commits.webkit.org/220030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255458 268f45cc-cd09-0410-ab3c-d52691b4dbfc