Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -8569,6 +8569,9 @@ void WebPageProxy::navigationGestureDidEnd(bool willNavigate, WebBackForwardList
     if (m_isLayerTreeFrozenDueToSwipeAnimation) {
         m_isLayerTreeFrozenDueToSwipeAnimation = false;
         send(Messages::WebPage::UnfreezeLayerTreeDueToSwipeAnimation());
+
+        if (m_provisionalPage)
+            m_provisionalPage->unfreezeLayerTreeDueToSwipeAnimation();
     }
 }
 
